# task-queue

./: .dockerignore  .gitignore  CONTRIBUTING.md  DockerFile  Dockerfile  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  start_services.sh
.github/workflows/: build.yml  publish.yml  publish_docker_image.yml  pytest_and_ruff.yml  release.yml  runners.yml  tests.yml  unit-test.yaml  unit_test.yml  validate_code.yml  validate_test_marks.py  verify_new_image.py  verify_version.py
composite-actions/: action.yaml
data_pipeline/: __init__.py  argo_workflows_queue_worker.py  config.py  in_memory_queue.py  queue_base.py  queue_with_events.py  queue_worker_interface.py  s3_queue.py  s5fs.py  sql_queue.py  work_queue.py  work_queue_api_client.py  work_queue_service_cli.py  work_queue_web_api.py
data_pipeline/events/: event.py  event_store_interface.py  in_memory_event_store.py  sql_event_store.py
resources/: docker-compose.test.yaml  quick-start-minimal.yaml  test_workflow_template.yaml
src/task_queue/: __init__.py  s5fs.py
task_queue/: __init__.py  argo_workflows_queue_worker.py  in_memory_queue.py  logger.py  queue_base.py  queue_pydantic_models.py  queue_with_events.py  queue_worker_interface.py  s3_queue.py  s5fs.py  sql_queue.py  work_queue.py  work_queue_api_client.py  work_queue_service_cli.py  work_queue_web_api.py
tests/: common_queue.py  conftest.py  psycoperror.py  test_api_endpoints.py  test_argo_workflows_worker_interface.py  test_config.py  test_logger.py  test_process_worker_interface.py  test_queue.py  test_queue_with_events.py  test_validate_args.py  test_work_queue.py  test_work_queue_api_client.py  utils.py
(+39 files in other folders)
