[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task_queue"

version = "1.15.1"

dependencies = [
    "requests",
    "fastapi[all]"
]

[project.optional-dependencies]
s3 = [
    "s3fs>=2023.6.0",
    # botocore >= 1.36.0 changes how hashes work, which breaks minio
    # compatibility. It is still compatible with AWS S3 so far.
    "botocore<1.36.0"
]

sql = [
    "sqlmodel",
    "psycopg2-binary",
]

# Automatically discover and include Python packages in your project
[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = []
